# AVR_ITI

./: .gitignore  README.md
APPS/Labs/Lab1/APP1/: APP1.c  CMakeLists.txt
APPS/Labs/Lab1/APP1/Debug/: APP1.elf  APP1.hex
APPS/Labs/Lab1/APP1/Src/: APP1.c
APPS/Labs/Lab1/APP2/: APP2.c
APPS/Labs/Lab1/APP2/Debug/: APP2.elf  APP2.hex
APPS/Labs/Lab1/APP3/: APP3.c
APPS/Labs/Lab1/APP3/Debug/: APP3.elf  APP3.hex
APPS/Labs/Lab1/APP4_Bonus/: APP4_Bonus.c
APPS/Labs/Lab1/APP4_Bonus/Debug/: APP4_Bonus.elf  APP4_Bonus.hex
APPS/Labs/Lab2/APP1/: APP1.c  CMakeLists.txt
APPS/Labs/Lab2/APP1/Debug/: APP1.elf  APP1.hex
APPS/Labs/Lab2/APP1/src/: APP1.c
APPS/Labs/Lab2/APP2/: APP2.c
APPS/Labs/Lab2/APP2/Debug/: APP2.elf  APP2.hex
APPS/Labs/Lab3/: CMakeLists.txt
APPS/Labs/Lab3/Debug/: Lab3.elf  Lab3.hex
APPS/Labs/Lab3/src/: Lab3.c
APPS/Labs/Lab4/: CMakeLists.txt
APPS/Labs/Lab4/inc/: Lab4.h
APPS/Labs/Lab4/src/: Lab4.c
APPS/Labs/Lab5/: CMakeLists.txt
APPS/Labs/Lab5/inc/: Lab5.h
APPS/Labs/Lab5/src/: Lab5.c
APPS/Labs/Lab6/: CMakeLists.txt
APPS/Labs/Lab6/buils/: CMakeCache.txt  Lab6.elf  Lab6.hex  Makefile  cmake_install.cmake
APPS/Labs/Lab6/buils/HLED/: Makefile  cmake_install.cmake
APPS/Labs/Lab6/buils/HSEVENSEG/: Makefile  cmake_install.cmake
APPS/Labs/Lab6/buils/MDIO/: Makefile  cmake_install.cmake
APPS/Labs/Lab6/buils/MPORT/: Makefile  cmake_install.cmake
APPS/Labs/Lab6/inc/: Lab6.h
APPS/Labs/Lab6/src/: Lab6.c
APPS/Labs/Lab7_LCD/: CMakeLists.txt
APPS/Labs/Lab7_LCD/src/: Lab7.c
APPS/Labs/Lab8_Keypad/: CMakeLists.txt
APPS/Labs/Lab8_Keypad/src/: Lab8.c
APPS/Simulation/Lab5/: Backup Of New Project.pdsbak  Lab5_Led.pdsprj.MIRA.mariam.workspace  Last Loaded New Project.pdsbak  New Project.pdsprj
COTS/LIB/HAL/HKEYPAD/: CMakeLists.txt
COTS/LIB/HAL/HKEYPAD/inc/: HKEYPAD.h  HKEYPAD_cfg.h
COTS/LIB/HAL/HKEYPAD/src/: HKEYPAD.c  HKEYPAD_cfg.c
COTS/LIB/HAL/HLCD/: CMakeLists.txt
COTS/LIB/HAL/HLCD/inc/: HLCD.h  HLCD_cfg.h
COTS/LIB/HAL/HLCD/src/: HLCD.c  HLCD_cfg.c
COTS/LIB/HAL/HLED/: CMakeLists.txt
COTS/LIB/HAL/HLED/inc/: HLED.h  HLED_Cfg.h
COTS/LIB/HAL/HLED/src/: HLED.c  HLED_Cfg.c
COTS/LIB/HAL/HSEVENSEG/: CMakeLists.txt
COTS/LIB/HAL/HSEVENSEG/inc/: HSEVENSEG.h  HSEVENSEG_Cfg.h
COTS/LIB/HAL/HSEVENSEG/src/: HSEVENSEG.c  HSEVENSEG_Cfg.c
COTS/LIB/HAL/HSWITCH/: HSWITCH.c  HSWITCH.h
COTS/LIB/MCAL/DIO/: CMakeLists.txt
COTS/LIB/MCAL/DIO/Inc/: MDIO.h  MDIO_Cfg.h
COTS/LIB/MCAL/DIO/Src/: MDIO.c  MDIO_CFG.c
COTS/LIB/MCAL/MDIO/: CMakeLists.txt
COTS/LIB/MCAL/MDIO/inc/: MDIO.h  MDIO_Cfg.h
COTS/LIB/MCAL/MDIO/src/: MDIO.c  MDIO_Cfg.c
COTS/LIB/MCAL/MPORT/: CMakeLists.txt
COTS/LIB/MCAL/MPORT/inc/: MPORT.h  MPORT_Cfg.h
COTS/LIB/MCAL/MPORT/src/: MPORT.c  MPORT_CFG.c
COTS/LIB/STD_LIB/: BIT_MATH.h  STD_TYPES.h
COTS/STD_LIB/: BIT_MATH.h
Lab1/Task1/: BIT_MATH.h  Lab1_Task1.pdsprj  main.c
Lab1/Task1/Debug/: Lab1_Task1.elf  Lab1_Task1.hex
Lab1/Task2/: Lab1_Task2.pdsprj  Last Loaded Lab1_Task2.pdsbak  main.c
Lab1/Task2/Debug/: Lab1_Task2.elf  Lab1_Task2.hex
Lab2/: APP2.c  DioLab2.txt  MDIO.c  MDIO.h  main.c
Lab2/Debug/: APP2.hex  Task1.elf  Task1.hex
Simulation/: Lab1_APP1.pdsprj  Lab1_APP2.pdsprj  Lab1_Task3.pdsprj  Lab1_Task4(Bonus).pdsprj  Lab2_APP1.pdsprj  Lab2_APP1.pdsprj.MARIAM.DELL.workspace  Lab2_APP2.pdsprj
